<?xml version="1.0" encoding="utf-8"?>
<!-- XML layout file for layout of login activity -->
<!-- belongs to LOGIN Activity -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="iubh.todoapp.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="35dp"
        android:textAlignment="center"
        android:text="@string/helloMessage"
        android:id="@+id/login_HelloText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loginMessage"
        android:id="@+id/login_InfoText"
        android:layout_below="@+id/login_HelloText"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stringUsername"
        android:id="@+id/login_StringUsername"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/login_InfoText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_alignBottom="@+id/login_StringUsername"
        android:layout_centerHorizontal="true"
        android:id="@+id/space"
        tools:targetApi="ice_cream_sandwich" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_EditTextUsername"
        android:layout_below="@+id/login_StringUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stringPassword"
        android:id="@+id/login_StringPassword"
        android:layout_below="@+id/login_EditTextUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_EditTextPassword"
        android:layout_below="@+id/login_StringPassword"
        android:layout_toStartOf="@+id/space"
        android:layout_toLeftOf="@+id/space"
        android:layout_alignEnd="@+id/login_EditTextUsername"
        android:layout_alignRight="@+id/login_EditTextUsername" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_EditTextPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/stringLogIn"
            android:id="@+id/login_ButtonLogIn"
            android:layout_weight="1"
            android:onClick="checkLogIn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/stringRegister"
            android:id="@+id/login_ButtonRegister"
            android:layout_weight="1"
            android:onClick="goToRegister" />
    </LinearLayout>

</RelativeLayout>
